adding qr generator

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,9 +40,8 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name="com.yalantis.ucrop.UCropActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name="com.app.imagepickerlibrary.ui.activity.ImagePickerActivity"
+            android:configChanges="orientation|screenSize" android:theme="@style/SSImagePicker" />
 
         <activity
             android:name=".activity.ResultActivity"
