--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,23 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera.any" />
 
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QrScanner"
-        android:largeHeap="true"
         tools:targetApi="31">
+
 
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPRECATED_API_ENABLED"
@@ -27,7 +32,6 @@
         <meta-data
             android:name="com.google.firebase.ml.common.LOGGING_LEVEL"
             android:value="1" />
-
         <meta-data
             android:name="com.google.firebase.perf.LogcatLoggingLevel"
             android:value="WARN" />
@@ -37,24 +41,25 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".activity.ResultActivity"
             android:exported="true" />
-
         <activity
             android:name=".activity.QrGenerator"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="true" />
-
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.SettingsActivity"
             android:exported="true" />
-    </application>
 
+        <activity
+            android:name=".activity.GeneratorActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan" />
+    </application>
 
 </manifest>
