--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,15 @@
             android:name=".activity.SettingsActivity"
             android:exported="true" />
 
+        <activity android:name=".activity.ScanImageActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="image/*" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".activity.GeneratorActivity"
             android:exported="true"
